@@ -1,3 +1,9 @@
+2018-02-06  Michael Collison  <michael.collison@arm.com>
+
+	* config/arm/thumb2.md:
+	(*thumb2_mov_negscc): Split only if TARGET_THUMB2 && !arm_restrict_it.
+	(*thumb_mov_notscc): Ditto.
+
 2018-02-06  Michael Meissner  <meissner@linux.vnet.ibm.com>
 
 	PR target/84154
